--- a/compose.yml
+++ b/compose.yml
@@ -1,10 +1,12 @@
 services:
+  # MariaDB Galera Cluster
   node1:
     container_name: node1
     hostname: node1
     build: ./docker/db
     volumes:
       - ./docker/db/conf/node1.cnf:/etc/mysql/conf.d/my.cnf
+      - ./docker/db/initdb.d:/docker-entrypoint-initdb.d
     environment:
       MARIADB_ROOT_PASSWORD: root
       MARIADB_DATABASE: root
@@ -32,3 +34,38 @@ services:
     depends_on:
       - node1
       - node2
+
+  # ProxySQL Cluster
+  proxysql1:
+    container_name: proxysql1
+    hostname: proxysql1
+    build: ./docker/proxysql
+    volumes:
+      - ./docker/proxysql/conf/proxysql.cnf:/etc/proxysql.cnf
+    depends_on:
+      - node1
+      - node2
+      - node3
+  proxysql2:
+    container_name: proxysql2
+    hostname: proxysql2
+    build: ./docker/proxysql
+    volumes:
+      - ./docker/proxysql/conf/proxysql.cnf:/etc/proxysql.cnf
+    depends_on:
+      - node1
+      - node2
+      - node3
+      - proxysql1
+  proxysql3:
+    container_name: proxysql3
+    hostname: proxysql3
+    build: ./docker/proxysql
+    volumes:
+      - ./docker/proxysql/conf/proxysql.cnf:/etc/proxysql.cnf
+    depends_on:
+      - node1
+      - node2
+      - node3
+      - proxysql1
+      - proxysql2
