--- a/docker/haproxy/conf/haproxy.cfg
+++ b/docker/haproxy/conf/haproxy.cfg
@@ -8,6 +8,7 @@ frontend stats
     bind :8404
     stats enable
     stats uri /stats
+    http-request use-service prometheus-exporter if { path /metrics }
     stats refresh 10s
     stats admin if LOCALHOST
     stats show-modules
