--- a/docker/proxysql/conf/proxysql.cnf
+++ b/docker/proxysql/conf/proxysql.cnf
@@ -5,6 +5,11 @@ admin_variables=
     mysql_ifaces="0.0.0.0:6032"
     cluster_username="cluster_user"
     cluster_password="cluster_pass"
+    web_enabled=true
+    web_port=6080
+    restapi_enabled=true
+    restapi_port=6070
+    prometheus_memory_metrics_interval=60
 }
 
 mysql_variables=
